@@ -37,6 +37,10 @@ tasks.withType(Test).configureEach {
     jvmArgs('--enable-native-access=ALL-UNNAMED')
 }
 
+tasks.withType(JavaExec).configureEach {
+    jvmArgs('--enable-native-access=ALL-UNNAMED')
+}
+
 application {
     mainModule = 'com.ak.fx.desktop'
     mainClass = 'com.ak.fx.desktop.FxApplication'
